2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-node.h:
	* ccss/ccss-property.c (ccss_property_init):
	* ccss/ccss-property.h:
	* ccss/ccss.sym:
	* doc/ccss-sections.txt:
	* doc/tmpl/property.sgml:
	* examples/Makefile.am:
	API for initialising custom properties.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-background-parser.c:
	* ccss/ccss-border-parser.c (border_factory_impl):
	* ccss/ccss-color.c (ccss_color_parse), (ccss_color_new),
	(peek_property_class):
	* ccss/ccss-parser.c (property_cb):
	* ccss/ccss.c (ccss_cairo_init):
	* ccss/ccss.sym:
	* examples/example-2.c (main):
	* examples/example-3.c (main):
	Fix creation of color properties.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-property-generic.c:
	* ccss/ccss-property-generic.h:
	Structure can be private to the .c file.

	* ccss/ccss.c (ccss_init), (ccss_shutdown), (ccss_cairo_init):
	Correctly initialise ccss so generic properties work.

	* doc/tmpl/block.sgml:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/property.sgml:
	Doc tweaks.

	* examples/example-1.c (main):
	Initialise ccss-cairo.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-block-priv.h:
	* ccss/ccss-block.c:
	* doc/ccss-docs.sgml:
	* doc/ccss-sections.txt:
	* doc/tmpl/block.sgml:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/node.sgml:
	Update docs.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-background-parser.c (background_factory):
	* ccss/ccss-block-priv.h:
	* ccss/ccss-block.c (ccss_block_add_property), (ccss_block_dump):
	* ccss/ccss-block.h:
	* ccss/ccss-border-parser.c:
	* ccss/ccss-parser.c (property_cb):
	* ccss/ccss-property-priv.h:
	* ccss/ccss-property.c:
	* ccss/ccss-property.h:
	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.c (ccss_style_lookup_property),
	(lookup_property_r), (ccss_style_get_double),
	(ccss_style_get_string), (ccss_style_dump):
	* ccss/ccss-stylesheet.c (inherit_container_style):